# Fun-Lang-Interpreter

./: .gitignore  Main.hs  Parser.hs  README.md  factorial.fl  factorial.mf  funlang.cabal  minifunc.cabal
DemoCodeFiles/: demo.mf
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AST.hs  Evaluator.hs  Main.hs  Parser.hs  TypeChecker.hs
