name:                funlang
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable funlang
  main-is:             Main.hs
  other-modules:       AST, Parser, TypeChecker, Evaluator
  build-depends:       base >=4.9,
                       containers >=0.5,
                       mtl >=2.2
  default-language:    Haskell2010
EOF